# translation-methods

./: README.md
antlr-cpp-2025-protagoniIsT/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  gcd.cpp  isprime.cpp
antlr-cpp-2025-protagoniIsT/.github/workflows/: classroom.yml
antlr-cpp-2025-protagoniIsT/cmake/: setup_target.cmake
antlr-cpp-2025-protagoniIsT/lib/: CMakeLists.txt
antlr-cpp-2025-protagoniIsT/lib/include/libitmoantlr/: Translator.h
antlr-cpp-2025-protagoniIsT/lib/src/: CMakeLists.txt  Translator.cpp
antlr-cpp-2025-protagoniIsT/resources/: Grammar.g4
antlr-cpp-2025-protagoniIsT/resources/.antlr/: Grammar.interp  GrammarBaseListener.java  GrammarLexer.interp  GrammarLexer.java  GrammarLexer.tokens  GrammarListener.java  GrammarParser.java
antlr-cpp-2025-protagoniIsT/unittests/: CMakeLists.txt  test_helper.cpp  test_helper.h  tests.cpp
parser-generator-cpp-2025-protagoniIsT/: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
parser-generator-cpp-2025-protagoniIsT/.github/workflows/: classroom.yml
parser-generator-cpp-2025-protagoniIsT/app/: CMakeLists.txt
parser-generator-cpp-2025-protagoniIsT/app/antlr/: .gitignore  CMakeLists.txt
parser-generator-cpp-2025-protagoniIsT/app/include/: GenContext.h  Generator.h  LexerGenerator.h  MyGrammarVisitor.h  ParserGenerator.h  Translator.h  Tree.h
parser-generator-cpp-2025-protagoniIsT/app/src/: CMakeLists.txt  Generator.cpp  LexerGenerator.cpp  MyGrammarVisitor.cpp  ParserGenerator.cpp  Translator.cpp  main.cpp
parser-generator-cpp-2025-protagoniIsT/resources/: ANTLR.grammar  Calculator.grammar  Grammar.g4  RecursiveParsing.grammar
parser-generator-cpp-2025-protagoniIsT/resources/.antlr/: Grammar.interp  Grammar.tokens  GrammarLexer.interp  GrammarLexer.java  GrammarParser.java
recursive-parsing-cpp-2025-protagoniIsT/: .gitignore  CMakeLists.txt  Makefile  README.md  input.txt  output.txt
recursive-parsing-cpp-2025-protagoniIsT/.cache/clangd/index/: Lexer.cpp.B05FE5E68B3FFE2D.idx  Lexer.h.EFA5E3E3B5E30292.idx  ParseError.h.D267A1BF8CCCC990.idx  ParseException.h.59B7795F17376035.idx  Parser.cpp.7F7D50B12F9B5B58.idx  Parser.h.7AA6FA6FA57B2FD4.idx  Tree.h.8205D2E75AA2D368.idx  main.cpp.1751AC2F6319F23F.idx
recursive-parsing-cpp-2025-protagoniIsT/.github/workflows/: classroom.yml
recursive-parsing-cpp-2025-protagoniIsT/src/: Lexer.cpp  Lexer.h  ParseError.h  Parser.cpp  Parser.h  Tree.h  grammar.md  main.cpp
sum-cpp-2025-protagoniIsT/: .gitignore  CMakeLists.txt  Makefile  README.md
sum-cpp-2025-protagoniIsT/.github/workflows/: classroom.yml
sum-cpp-2025-protagoniIsT/src/: main.cpp
